--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="city_name">Город</string>
     <string name="about_app">О программе Погода</string>
     <string name="author">Автор: Алексей</string>
+    <string name="attention_city_name">Вы не ввели город!</string>
 </resources>
