--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="about_app">About App Weather</string>
     <string name="author">Author: Alexey</string>
     <string name="attention_city_name">Enter the name of the city</string>
+    <string name="moscow">Moscow</string>
+    <string name="saint_petersburg">Saint-Petersburg</string>
 </resources>
